kubernetes-manifests/voting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-deployment
spec:
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
    spec: 
      containers:
      - name: voting
        image: voting-image
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  type: NodePort
  selector:
    app: voting
  ports:
  - port: 4002
    targetPort: 8080
